package tp3;

public abstract class FactoryPizzas {

	public abstract Pizza creerPizza(String type);
	
}
