package tp3;

public class PizzaFromageStyleBrest extends PizzaFromage {
	public PizzaFromageStyleBrest(){
		this.nom = "pizza au Fromage de Brest";
	}
}
