package tp3;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaPoivronsStyleBrest extends PizzaPoivrons {
	public PizzaPoivronsStyleBrest() {
		this.nom = "pizza aux poivrons de Brest";
	}

}
