package tp3;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaPoivronsStyleStrasbourg extends PizzaPoivrons {
	public PizzaPoivronsStyleStrasbourg() {
		this.nom = "pizza aux poivrons de Strasbourg";
	}

}
