package tp3;

public class PizzeriaBrest extends Pizzeria {

	public PizzeriaBrest() {
		super(FactoryPizzaBrest.getInstance());
	}

}
